tests/test-extension-23.lxf.exp
Â<<<

Lexon: syntax error at line 8: unexpected character. Can't process 'Â' (ascii c2 194).
>> Â
