tests/test-extension-23.lex
GRAMMAR:
COMMENT: %LXF %ERR %LXFERR (%ERR alone atm not checked when 8th parameter in Makefile empty)
COMMENT: FAILS FOR ILLEGAL CHAR #194 in line 7.

Appointment:
Someone appoints somebody [as] party.
Somebody is appointed [as] party.
 
appoints: appoint
as: to [from now on] [be], as a new

